--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -29,19 +29,20 @@ body {
 }
 
 #s_page {
-	position: absolute;
+	position: relative;
 	height: 100%;
 	left:0;
 	right:0;
 	bottom:0;
-	top:0;
-	background: transparent;
+	top: 44px;
+	background:  linear-gradient(to bottom, rgba(0,71,153,0.50), rgba(0,71,153, 0.33)), url('../images/white_carbonfiber.png') !important;
+	-webkit-backface-visibility: hidden !important;	
+	display: none;
 }
 
 #f_page {
 	width: 100%;
 	height: 100%;
-	background: transparent;
 	-webkit-font-smoothing: subpixel-antialiased !important;
 	box-shadow: 0px 24px 36px #000;
 
@@ -50,11 +51,8 @@ body {
 	left: 0 !important;
 	right: 0 !important;
 	bottom: 0 !important;
-
+	top: 44px;
 }
-
-
-
 
 #root {
 	background: transparent;
@@ -98,6 +96,8 @@ body {
 
 #f_header {
 	height: 44px;
+	box-shadow: 0 0px 12px #555;
+	border-bottom: 1px solid #555;
 }
 
 .header-icon {
@@ -538,11 +538,13 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 
 #s_content {
 	position: absolute;
-	top: 44px !important;
+	top: 0px !important;
 	bottom: 40px !important;
 	left: 0;
 	right: 0;
 	overflow: hidden;
+	//position: relative;
+	padding-top: 6px;	
 }
 
 #top {
@@ -564,6 +566,8 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	//, inset 0px 0px 7px #ececec !important;
 	position: relative;
 	z-index: 5;
+	//background:  linear-gradient(to bottom, rgba(0,71,153,0.50), rgba(0,71,153, 0.33)), url('../images/white_carbonfiber.png') !important;
+	-webkit-backface-visibility: hidden !important;			
 }
 
 #bottom {
@@ -1017,13 +1021,15 @@ background-size: 5px 5px;
 }
 
 #prefs {
-	background: transparent;
 	position: absolute;
 	top: 44px;
 	bottom:0;
 	left:0;
 	right:0;
 	//box-shadow: 0px 24px 36px #000;
+	//background: transparent;
+	background:  linear-gradient(to bottom, rgba(0,71,153,0.50), rgba(0,71,153, 0.33)), url('../images/white_carbonfiber.png') !important;
+	-webkit-backface-visibility: hidden !important;		
 }
 
 .prefsTees {
@@ -1127,6 +1133,10 @@ background-size: 5px 5px;
 	visibility: visible;
 	width: 100%;
 	height: 100%;
+	position: relative;		
+	background:  linear-gradient(to bottom, rgba(0,71,153,0.50), rgba(0,71,153, 0.33)), url('../images/white_carbonfiber.png') !important;
+	-webkit-backface-visibility: hidden !important;		
+	top: 44px;
 
 }
 
@@ -1134,6 +1144,9 @@ background-size: 5px 5px;
 	-webkit-font-smoothing: subpixel-antialiased !important;
 	width: 100%;
 	height: 100%;
+	position: relative;	
+background:  linear-gradient(to bottom, rgba(0,71,153,0.50), rgba(0,71,153, 0.33)), url('../images/white_carbonfiber.png') !important;
+	-webkit-backface-visibility: hidden !important;		
 }
 
 
@@ -1206,14 +1219,16 @@ background-size: 5px 5px;
 //	height: 100%;
 //	overflow: hidden;
 	-webkit-font-smoothing: subpixel-antialiased !important;
-	-webkit-transform: translate3d(0,0,0) !important;
+	-webkit-transform: translate3d(0,0,0);
 	//margin-left: 100% !important;
 	position: absolute;
-	top: 0px;
+	top: 44px;
 	bottom: 0px;
 	left:0;
 	right:0;
-	margin-left: 100%;
+	visibility: hidden;
+	display: none;
+	overflow: visible;
 }
 
 * .ui-listview > li.ui-last-child > a.ui-btn {
@@ -1285,7 +1300,7 @@ background-size: 5px 5px;
 {
 	position: absolute;
 	margin: 0px;
-	top: 44px;
+	top: 0px;
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
