--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
@@ -34,64 +34,66 @@
 
 		{% endjavascripts %}
 
+
+		<title>Bogikorttiin kirjattu golfkierros</title>
+
 	</head>
 
 
 	<body>
-		<div class="large-12 medium-12 small-12 large-centered medium-centered small-centered columns" style="background: transparent !important; max-width: 760px">
+		<div class="large-12 medium-12 small-12 large-centered medium-centered small-centered columns" style="background: transparent !important; min-width: 520px; max-width: 640px">
 
 			<div class="row" style="text-align: center; padding: 16px">
 				<img src="{{ asset('bundles/apexscore/images/touch-icon-iphone-retina.png') }}" style="width: 60px; height: 60px;  display: inline-block; border-radius: 14px; border: 2px solid #fefefe; box-shadow: 0 0 6px #222"></img>		
 				<h1 style="display: inline-block; position: relative; top: 8px">Bogikortti</h1>
 			</div>
 
-			<div class="large-12 medium-12 small-12 columns" data-bind="fadeVisible: roundLoaded() == false" style="text-align: center; margin-top: 240px">
+			<div class="large-12 medium-12 small-12 columns" data-bind="fadeVisible: roundLoaded() == false" style="text-align: center; margin-top: 33%; width: 100%;">
 				<div class="ajaxloader_large"></div>
 			</div>
 
 
 			<div class="large-12 medium-12 small-12 columns" data-bind="fadeVisible: roundLoaded() == true" style="background: #fefefe; border-radius: 24px; box-shadow: 0 0 32px #999">
 
-				<div style="height: 24px"></div>
+				<div style="height: 36px"></div>
 
-				<div class="large-12 medium-12 small-12 columns">
-					<h4 style="display: inline-block; float: left; line-height: 1.0">
-						<span data-bind="text: courseName"></span>
-					</h4>
+				<div style="width: 520px; margin: auto">
+					<div class="large-6 medium-6 small-6 columns">
+						<h4 class="subheader" style="text-align: left; line-height: 1.0">
+							<span data-bind="text: courseName"></span>
+						</h4>
 
-					<h4 style="display: inline-block; float: right; line-height: 1.0">
-						<span data-bind="text: moment(roundStartTime()).format('DoMoYYYY')"></span>
-					</h4>				
-				</div>
-				<div class="large-12 medium-12 small-12 columns">
-					<h4 style="display: inline-block; float: left; line-height: 1.0">
-						<span data-bind="text: playerName"></span>
-					</h4>
+						<h4 class="subheader" style="text-align: left; line-height: 1.0">
+							<span data-bind="text: playerName"></span>
+						</h4>
 
-					<div style="display: inline-block; float: right">
-						<h4 style="display: inline-block; line-height: 1.0">
-							Tarkka tasoitus&nbsp;<span data-bind="text: round_hcp"></span>
+						<h4 class="subheader" style="text-align: left; line-height: 1.0">
+							<span data-bind="text: translate_tee()"></span>&nbsp;tii
 						</h4>
 					</div>
-				</div>
-				<div class="large-12 medium-12 small-12 columns">
-					<h4 style="display: inline-block; float: left; line-height: 1.0">
-						<span data-bind="text: translate_tee()"></span>&nbsp;tii
-					</h4>
+					<div class="large-6 medium-6 small-6 columns">
+						<h4 class="subheader" style="text-align: right; line-height: 1.0">
+							<span data-bind="text: moment(roundStartTime()).format('DoMoYYYY')"></span>
+						</h4>		
 
-					<h4 style="display: inline-block; float: right; line-height: 1.0">
-						Pelitasoitus&nbsp;<span data-bind="text: playerPlayingHcp"></span>
-					</h4>				
+						<h4 class="subheader" style="text-align: right; line-height: 1.0">
+							Tarkka tasoitus&nbsp;<span data-bind="text: round_hcp"></span>
+						</h4>
+
+						<h4 class="subheader" style="text-align: right; line-height: 1.0">
+							Pelitasoitus&nbsp;<span data-bind="text: playerPlayingHcp"></span>
+						</h4>				
+					</div>
 				</div>
 
-				<div class="row" style="float: left">
+				<div class="row">
 					<div class="large-12 medium-12 small-12 columns">
 						<h5 class="subheader" style="text-align: center">
 							Ulos
 						</h5>
 					</div>
 					<div class="large-12 medium-12 small-12 columns">
-						<div style="display: table">
+						<div style="display: table; margin: auto;">
 							<div style="display: table-cell">
 								<div class="scoreCell" style="border-left: 1px solid #bbb; background: #eee; text-shadow: 0 1px 2px #fff; font-weight: 600;">
 									<div class="scoreOuter" style="margin-left: 0; width: 60px">Reikä</div>
@@ -104,7 +106,7 @@
 							</div>
 
 							<div data-bind="foreach: scoreCard">
-								<div data-bind="visible: $index() < 9" style="display: table-cell; width: 80px">
+								<div data-bind="visible: $index() < 9" style="display: table-cell;">
 									<div class="scoreCell" style="background: #eee; text-shadow: 0 1px 2px #fff; font-weight: 600;">
 										<div class="scoreOuter" data-bind="text: hole_number"></div>
 									</div>
@@ -123,9 +125,9 @@
 									</div>
 									<div class="scoreCell" data-bind="text: points"></div>								
 								</div>
-								<div data-bind="visible: $index() == 10" style="display: table-cell; width: 80px">
+								<div data-bind="visible: $index() == 10" style="display: table-cell; ">
 									<div class="scoreCell" style="background: #eee; text-shadow: 0 1px 2px #fff; font-weight: 600;">
-										<div class="scoreOuter" style="margin-left: 0; width: 80px">&nbsp;</div>
+										<div class="scoreOuter" style="margin-left: 0; ">&nbsp;</div>
 									</div>
 									<div class="scoreCell" data-bind="text: $root.frontNinePar"></div>
 									<!-- <div class="scoreCell">&nbsp;</div> -->
@@ -143,7 +145,7 @@
 					</div>
 				</div>
 
-				<p>&nbsp;</p>
+				<div style="height: 12px"></div>
 
 				<div class="row" style="float: left">
 					<div class="large-12 medium-12 small-12 columns" data-bind="if: holes().length > 9">
@@ -152,7 +154,7 @@
 						</h5>
 					</div>
 					<div class="large-12 medium-12 small-12 columns" data-bind="if: holes().length > 9">
-						<div style="display: table">
+						<div style="display: table; margin: auto">
 							<div style="display: table-cell">
 								<div class="scoreCell" style="border-left: 1px solid #bbb; background: #eee; text-shadow: 0 1px 2px #fff; font-weight: 600">
 									<div class="scoreOuter" style="margin-left: 0; width: 60px">Reikä</div>
@@ -165,7 +167,7 @@
 							</div>
 
 							<div data-bind="foreach: scoreCard">
-								<div data-bind="visible: $index() >= 9" style="display: table-cell; width: 80px">
+								<div data-bind="visible: $index() >= 9" style="display: table-cell; ">
 									<div class="scoreCell" style="background: #eee; text-shadow: 0 1px 2px #fff; font-weight: 600;">
 										<div class="scoreOuter"data-bind="text: hole_number"></div>
 									</div>
@@ -185,9 +187,9 @@
 									<div class="scoreCell" data-bind="text: points"></div>								
 								</div>
 
-								<div data-bind="visible: $index() == $root.scoreCard().length - 1" style="display: table-cell; width: 80px">
+								<div data-bind="visible: $index() == $root.scoreCard().length - 1" style="display: table-cell; ">
 									<div class="scoreCell" style="background: #eee; text-shadow: 0 1px 2px #fff; font-weight: 600">
-										<div class="scoreOuter" style="margin-left: 0; width: 80px">&nbsp;</div>
+										<div class="scoreOuter" style="margin-left: 0; ">&nbsp;</div>
 									</div>
 									<div class="scoreCell" data-bind="text: $root.coursePar"></div>
 									<!-- div class="scoreCell">&nbsp;</div> -->
@@ -204,10 +206,11 @@
 						</div>
 					</div>
 
-					<p>&nbsp;</p>
+
 
 					<div class="row">
 						<div class="large-12 medium-12 small-12 columns" style="text-align: center">
+							<div style="height: 12px"></div>						
 							<div>
 								<h4 class="subheader" style="display: inline-block">
 									<span data-bind="text: totalScore"></span><span>&nbsp;lyöntiä</span>
@@ -221,7 +224,7 @@
 									<span>Uusi tasoitus</span>&nbsp;<span data-bind="text: hcpPreview"></span>
 								</h4>
 							</div>
-							<p>&nbsp;</p>
+							<div style="height: 24px"></div>
 						</div>
 					</div>
 				</div>
