Fonttivammaisille käyttöjärjestelmille fallbackit

--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/site_stylesheets.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/site_stylesheets.css
@@ -2,6 +2,7 @@ body {
 	width: 100%;
 	background-image: url('../images/white_carbonfiber.png') !important;
 	cursor: auto !important;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;	
 }
 
 .content {
